<resources>
    <string name="abs">Abdominais</string>
    <string name="activity_level">Fator de Atividade</string>
    <string name="add_exercise">Adicionar Exercício</string>
    <string name="add_food_error">Erro ao adicionar alimento</string>
    <string name="add_nutrition_info">Adicionar Informações Nutricionais</string>
    <string name="add_training">Adicionar Treino</string>
    <string name="adduction_leg_on_machine">Adução de Perna na Máquina</string>
    <string name="adductors">Adutores</string>
    <string name="age">Idade</string>
    <string name="age_hint">Digite sua idade</string>
    <string name="anterior_deltoids">Deltóides Anterior</string>
    <string name="app_name">AnarcoMarombismo</string>
    <string name="articulated_pulley">Pulley Articulado</string>
    <string name="back">Dorsal</string>
    <string name="back_">Costas</string>
    <string name="back_and_biceps">Costas e Bíceps</string>
    <string name="basal_metabolism_calculated_successfully">Metabolismo Basal calculado com sucesso</string>
    <string name="biceps">Bíceps</string>
    <string name="biceps_bar_w">Bíceps Barra W</string>
    <string name="breastplate">Peitoral</string>
    <string name="cadence">Cadência</string>
    <string name="cadence_hint">Insira a cadência</string>
    <string name="calculate_basal_metabolic_rate">Calcular Taxa Metabólica Basal</string>
    <string name="calf_and_legs">Pernas e Panturrilha</string>
    <string name="calories_b">Calorias</string>
    <string name="calories_kcal">Calorias (kcal)</string>
    <string name="calves">Panturrilhas</string>
    <string name="carbohydrates">Carboidratos (g)</string>
    <string name="carbohydrates_b">Carboidratos</string>
    <string name="chest_and_triceps">Peito e Tríceps</string>
    <string name="daily_calories">Calorias Diárias</string>
    <string name="daily_calories_imported_successfully">Calorias diárias importadas com sucesso</string>
    <string name="daily_calories_removed_successfully">Calorias Diárias removidas com sucesso</string>
    <string name="daily_goals">Metas Diarias</string>
    <string name="dailycalories">dailyCalories</string>
    <string name="day">dia</string>
    <string name="days">dias</string>
    <string name="decrease_the_value_of_protein_in_or_fats">Diminua o valor das proteínas ou gorduras</string>
    <string name="default_cadence">3-1-3</string>
    <string name="default_reps">10,10,10</string>
    <string name="default_rest">60</string>
    <string name="default_sets">3</string>
    <string name="default_training_name">Treino</string>
    <string name="define_your_metabolic_profile_first">Defina seu perfil metabólico  primeiro</string>
    <string name="deltoids">Deltóides</string>
    <string name="description">Descrição</string>
    <string name="description_hint">Insira a descrição</string>
    <string name="development_with_halter">Desenvolvimento com Halteres</string>
    <string name="dietary_fiber_b">Fibras Dietéticas</string>
    <string name="dietary_fibers">Fibra Dietéticas (g)</string>
    <string name="double_click_fast_for_exclusion">Clique duas vez rápido para exclusão</string>
    <string name="dumbbell_press">Dumbbell Press</string>
    <string name="dumbbell_press_30">Dumbbell Press 30º</string>
    <string name="dumbbell_press_less30">Dumbbell Press -30º</string>
    <string name="edit_training">Editar Treino</string>
    <string name="energy_kcal">Calorias (kcal)</string>
    <string name="energy_kj">Calorias (kj)</string>
    <string name="enter_calories_kcal">Insira as calorias (kcal)</string>
    <string name="enter_carbohydrate">Insira o carboidrato</string>
    <string name="enter_dietary_fiber">Insira a fibra dietética</string>
    <string name="enter_lipids">Insira os lipídios</string>
    <string name="enter_protein">Insira a proteína</string>
    <string name="enter_sodium">Insira o sódio</string>
    <string name="error_file_empty">Arquivo vázio</string>
    <string name="error_no_file_selected">Nenhum arquivo selecionado</string>
    <string name="error_reading_file">Erro ao ler arquivo</string>
    <string name="error_removing_food">Não foi possível remover o alimento</string>
    <string name="exercise_hint">Insira o nome do exercício</string>
    <string name="exercise_name">Nome do Exercício</string>
    <string name="exercise_not_found">Exercício não encontrado</string>
    <string name="exercises">exercises</string>
    <string name="extension_chair">Cadeira Extensora</string>
    <string name="fat_by_weight">Gordura/Peso</string>
    <string name="file_export_error">Erro ao exportar o arquivo</string>
    <string name="fill_all_fields">Preencha todos os campos</string>
    <string name="fill_in_the_food_name">Preencha o nome do alimento</string>
    <string name="finished">finalizado</string>
    <string name="flex_chair">Cadeira Flexora</string>
    <string name="flex_table">Mesa Flexora</string>
    <string name="food_description">Descrição de comida</string>
    <string name="food_name">Nome de comida</string>
    <string name="food_removal_error">Erro ao remover alimento</string>
    <string name="foods">foods</string>
    <string name="free_squat">Agachamento Livre</string>
    <string name="front_triangle_pulley">Pulley Frente Triângulo</string>
    <string name="frontal_elevation">Elevação Frontal</string>
    <string name="g">g</string>
    <string name="gender">Gênero</string>
    <string name="glutes">Glúteos</string>
    <string name="grams">Gramas</string>
    <string name="hammer_thread_alternate_each_side_counts_as_repeated">Rosca Martelo Alternado (cada lado conta como ½ repetição)</string>
    <string name="height">Altura (cm)</string>
    <string name="height_hint">Digite sua altura</string>
    <string name="high_paddle_with_bar_w">Remada Alta com Barra W</string>
    <string name="insert_grams">Insira Gramas</string>
    <string name="insert_the_food_description">Insira a descrição da comida</string>
    <string name="it_was_not_possible_to_load_the_food">Não foi possível carregar o alimento</string>
    <string name="lateral_deltoids">Deltóides Lateral</string>
    <string name="lateral_elevation">Elevação Lateral</string>
    <string name="leg_press_45">Leg Press 45º</string>
    <string name="lipids">Lipídios (g)</string>
    <string name="lipids_b">Lípidos</string>
    <string name="load">Carga</string>
    <string name="load_hint">Insira a carga em quilogramas</string>
    <string name="loading">Carregando ...</string>
    <string name="low_stroke">Remada Baixa</string>
    <string name="lower_members">Membros Inferiores</string>
    <string name="machine_leg_abduction">Abdução de Perna na Máquina</string>
    <string name="mandatory_activity_level">Fator de atividade é obrigatório</string>
    <string name="mandatory_age">Idade é obrigatória</string>
    <string name="mandatory_gender">Gênero é obrigatório</string>
    <string name="mandatory_height">Altura é obrigatória</string>
    <string name="mandatory_weight">Peso é obrigatório</string>
    <string name="metabolic_profile">Perfil Metabólico</string>
    <string name="mg">mg</string>
    <string name="muscle">Músculo</string>
    <string name="muscles">Músculos</string>
    <string name="new_calorie">Nova Caloria</string>
    <string name="new_food">Novo Alimento</string>
    <string name="no_calories_added_yet">Nenhuma caloria adicionada ainda</string>
    <string name="no_daily_calories_to_export">Nenhuma caloria diaria exportada</string>
    <string name="no_internet">Verifique sua conexão com a internet</string>
    <string name="nutritional_information">Informações Nutricionais</string>
    <string name="objective_saved">Objetivo salvo com sucesso</string>
    <string name="oblique_external">Oblíquos Externos</string>
    <string name="oblique_internal">Oblíquos Internos</string>
    <string name="please_wait">Por favor, aguarde ...</string>
    <string name="posterior_deltoids">Deltóides Posterior</string>
    <string name="protein_by_weight">Proteína/Peso</string>
    <string name="proteins">Proteínas (g)</string>
    <string name="proteins_b">Proteínas</string>
    <string name="pulley_front_bar">Pulley Frente Barra</string>
    <string name="pullover_with_halter_on_the_black_bench">Pullover com Halter Deitado no Banco Reto</string>
    <string name="quadriceps">Quadríceps</string>
    <string name="rectus_abdominal">Reto Abdominal</string>
    <string name="remove">Remover</string>
    <string name="remove_exercise">Remover Exercício</string>
    <string name="remove_exercise_successful">Exercício removido com sucesso!</string>
    <string name="remove_it">Remover</string>
    <string name="remove_nutrition_info">Remover Informações Nutricionais</string>
    <string name="remove_training_error">Erro ao remover treino</string>
    <string name="remove_training_successful">Treino removido com sucesso!</string>
    <string name="removed">removido</string>
    <string name="reps">Repetições</string>
    <string name="reps_hint">Insira o número de repetições</string>
    <string name="rest">Descanso</string>
    <string name="rhomboids">Romboides</string>
    <string name="save">Salvar</string>
    <string name="save_exercise_successful">Exercício salvo com sucesso!</string>
    <string name="save_food_error">Erro ao salvar o alimento</string>
    <string name="save_metabolic_profile">Salvar Perfil Metabólico</string>
    <string name="save_target">Salvar meta</string>
    <string name="save_training_successful">Treino salvo com sucesso!</string>
    <string name="search_for_food">Pesquise alimento...</string>
    <string name="seconds_hint">Insira o tempo de descanso em segundos</string>
    <string name="see">Ver</string>
    <string name="select_food_above">selecione alimento acima</string>
    <string name="select_muscle">Selecione o músculo</string>
    <string name="selected">selecionado</string>
    <string name="serratus_anterior">Serrátil Anterior</string>
    <string name="sets">Séries</string>
    <string name="sets_hint">Insira o número de séries</string>
    <string name="shoulder_and_triceps">Ombro e Trapézio</string>
    <string name="shrinkage_with_halter_in_front_of_body">Encolhimento com Halter na Frente do Corpo</string>
    <string name="shrinkage_with_halter_on_the_side_of_the_body">Encolhimento com Halter na Lateral do Corpo</string>
    <string name="shrinking_with_body_halter">Encolhimento com Halter Detrás do Corpo</string>
    <string name="side_lift_on_inclined_bench">Elevação Lateral no Banco Inclinado</string>
    <string name="sitting_lateral_elevation">Elevação Lateral Sentado</string>
    <string name="skull_crushers">Tríceps Testa</string>
    <string name="sodium">Sódio (mg)</string>
    <string name="sodium_b">Sódio</string>
    <string name="spine_erectors">Eretores da Coluna</string>
    <string name="squat_stiff">Agachamento Stiff</string>
    <string name="straight_thread_on_rope">Rosca Direta na Corda</string>
    <string name="successful_imported_training">Treino importado com sucesso</string>
    <string name="successful_target_food">Alimento salvo com sucesso</string>
    <string name="successfully_removed_food">Alimento removido com sucesso</string>
    <string name="thigh_back">Posterior de Coxa</string>
    <string name="thighs">Coxas</string>
    <string name="thread_spider">Rosca Spider</string>
    <string name="torso">Tronco</string>
    <string name="training">Treino</string>
    <string name="training_a">Treino A</string>
    <string name="training_b">Treino B</string>
    <string name="training_c">Treino C</string>
    <string name="training_d">Treino D</string>
    <string name="training_name">Nome</string>
    <string name="training_name_hint">Insira o nome</string>
    <string name="training_not_found">Treino não encontrado</string>
    <string name="video_link">Link de Vídeo</string>
    <string name="video_link_hint">Insira o link de video (Youtube apenas)</string>
</resources>