<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formExercise">

    <TextView
        android:id="@+id/textViewExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/exercise_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextExerciseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/exercise_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewExerciseName"
        app:layout_constraintTop_toBottomOf="@+id/textViewExerciseName" />

    <!-- Adicionando campos para Séries, Repetições, Carga, Repouso e Cadência -->

    <TextView
        android:id="@+id/textViewSets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sets"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="@+id/editTextExerciseName"
        app:layout_constraintTop_toBottomOf="@+id/editTextExerciseName" />

    <EditText
        android:id="@+id/editTextSets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/sets_hint"
        android:inputType="number"
        android:text="@string/default_sets"
        app:layout_constraintEnd_toEndOf="@+id/editTextExerciseName"
        app:layout_constraintStart_toStartOf="@+id/editTextExerciseName"
        app:layout_constraintTop_toBottomOf="@+id/textViewSets" />

    <TextView
        android:id="@+id/textViewRepetitions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/reps"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="@+id/editTextExerciseName"
        app:layout_constraintTop_toBottomOf="@+id/editTextSets" />

    <EditText
        android:id="@+id/editTextRepetitions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/reps_hint"
        android:inputType="number"
        android:text="@string/default_reps"
        app:layout_constraintEnd_toEndOf="@+id/editTextExerciseName"
        app:layout_constraintStart_toStartOf="@+id/editTextExerciseName"
        app:layout_constraintTop_toBottomOf="@+id/textViewRepetitions" />

    <TextView
        android:id="@+id/textViewLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/load"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="@+id/editTextExerciseName"
        app:layout_constraintTop_toBottomOf="@+id/editTextRepetitions" />

    <EditText
        android:id="@+id/editTextLoad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/load_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/editTextExerciseName"
        app:layout_constraintStart_toStartOf="@+id/editTextExerciseName"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoad" />

    <TextView
        android:id="@+id/textViewRest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rest"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="@+id/editTextExerciseName"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoad" />

    <EditText
        android:id="@+id/editTextRest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/seconds_hint"
        android:inputType="number"
        android:text="@string/default_rest"
        app:layout_constraintEnd_toEndOf="@+id/editTextExerciseName"
        app:layout_constraintStart_toStartOf="@+id/editTextExerciseName"
        app:layout_constraintTop_toBottomOf="@+id/textViewRest" />

    <TextView
        android:id="@+id/textViewCadence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cadence"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="@+id/editTextExerciseName"
        app:layout_constraintTop_toBottomOf="@+id/editTextRest" />

    <EditText
        android:id="@+id/editTextCadence"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/cadence_hint"
        android:inputType="text"
        android:text="@string/default_cadence"
        app:layout_constraintEnd_toEndOf="@+id/editTextExerciseName"
        app:layout_constraintStart_toStartOf="@+id/editTextExerciseName"
        app:layout_constraintTop_toBottomOf="@+id/textViewCadence" />

    <!-- Fim dos campos para Repouso e Cadência -->

    <Button
        android:id="@+id/addExerciseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#fefd02"
        android:textColor="#000000"
        android:text="@string/add_exercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextCadence"
        app:layout_constraintStart_toStartOf="@+id/editTextCadence"
        app:layout_constraintTop_toBottomOf="@+id/editTextCadence"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/editTrainingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#fefd02"
        android:textColor="#000000"
        android:text="@string/remove_exercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/addExerciseButton"
        app:layout_constraintStart_toStartOf="@+id/addExerciseButton"
        app:layout_constraintTop_toBottomOf="@+id/addExerciseButton"
        app:layout_constraintVertical_bias="0.099" />

</androidx.constraintlayout.widget.ConstraintLayout>
