<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".playExercise">

    <WebView
        android:id="@+id/webView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/addPlayExerciseFormButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPlayExerciseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/exercise_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_primary"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/editPlayTextExerciseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/exercise_hint"
                android:inputType="textPersonName"
                android:padding="12dp" />

            <TextView
                android:id="@+id/textViewPlayMuscleGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/muscle"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_primary"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/editTextPlayMuscleGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edittext_background"
                android:padding="12dp" />

            <TextView
                android:id="@+id/textViewPlayRepetitions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/reps"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_primary"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/editPlayTextRepetitions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/reps_hint"
                android:inputType="text"
                android:padding="12dp"
                android:text="@string/default_reps" />

            <TextView
                android:id="@+id/textViewPlaySets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/sets"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_primary"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/editPlayTextSets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/sets_hint"
                android:inputType="number"
                android:padding="12dp"
                android:text="@string/default_sets" />

            <TextView
                android:id="@+id/textViewPlayLoad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/load"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_primary"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/editPlayTextLoad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/load_hint"
                android:inputType="numberDecimal"
                android:padding="12dp" />

            <TextView
                android:id="@+id/textViewPlayRest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/rest"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_primary"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/editPlayTextRest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/seconds_hint"
                android:inputType="number"
                android:padding="12dp"
                android:text="@string/default_rest" />

            <TextView
                android:id="@+id/textViewPlayCadence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/cadence"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_primary"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/editPlayTextCadence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/cadence_hint"
                android:inputType="text"
                android:padding="12dp"
                android:text="@string/default_cadence" />

            <TextView
                android:id="@+id/textViewPlayVideoLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/video_link"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_primary"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/editPlayTextVideoLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/video_link_hint"
                android:inputType="textUri"
                android:padding="12dp" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/addPlayExerciseFormButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/button_color"
        android:padding="12dp"
        android:text="@string/add_exercise"
        android:textColor="@color/yellow"
        app:icon="@drawable/ic_fluent_save_24_regular"
        app:iconGravity="textStart"
        app:iconSize="32dp"
        app:iconTint="@color/yellow"
        app:layout_constraintBottom_toTopOf="@+id/removePlayExerciseFormButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/removePlayExerciseFormButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/button_color"
        android:padding="12dp"
        android:text="@string/remove_exercise"
        android:textColor="@color/yellow"
        app:icon="@drawable/ic_fluent_delete_24_regular"
        app:iconGravity="textStart"
        app:iconSize="32dp"
        app:iconTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
